# training-autotools

./: Makefile.am  README  configure.ac
src/lib/: Makefile.am  hell.c  hell.h
